RESOLVED FIXED200999
[Mail] Tapping top of message scrolls back to copied text instead of top of the message
https://bugs.webkit.org/show_bug.cgi?id=200999
Summary [Mail] Tapping top of message scrolls back to copied text instead of top of t...
Tim Horton
Reported 2019-08-21 15:17:36 PDT
[Mail] Tapping top of message scrolls back to copied text instead of top of the message
Attachments
Patch (15.03 KB, patch)
2019-08-21 15:18 PDT, Tim Horton
no flags
Patch (15.03 KB, patch)
2019-08-21 15:21 PDT, Tim Horton
no flags
Patch (14.93 KB, patch)
2019-08-21 15:42 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-08-21 15:18:07 PDT
Tim Horton
Comment 2 2019-08-21 15:18:08 PDT
Tim Horton
Comment 3 2019-08-21 15:21:46 PDT
Wenson Hsieh
Comment 4 2019-08-21 15:36:20 PDT
Comment on attachment 376929 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376929&action=review > LayoutTests/editing/selection/ios/change-selection-by-tapping-with-existing-selection.html:51 > + // await UIHelper.activateElementAndWaitForInputSession(document.getElementById("editor")); 🤷🏻‍♂️
Tim Horton
Comment 5 2019-08-21 15:40:34 PDT
(In reply to Wenson Hsieh from comment #4) > Comment on attachment 376929 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=376929&action=review > > > LayoutTests/editing/selection/ios/change-selection-by-tapping-with-existing-selection.html:51 > > + // await UIHelper.activateElementAndWaitForInputSession(document.getElementById("editor")); > > 🤷🏻‍♂️ LOL from the test I copied. Will remove
Tim Horton
Comment 6 2019-08-21 15:42:01 PDT
WebKit Commit Bot
Comment 7 2019-08-21 16:05:33 PDT
Comment on attachment 376938 [details] Patch Clearing flags on attachment: 376938 Committed r248974: <https://trac.webkit.org/changeset/248974>
WebKit Commit Bot
Comment 8 2019-08-21 16:05:35 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9 2019-08-22 09:37:50 PDT
This change caused the following tests to fail on iOS Simulator: editing/deleting/smart-delete-003.html editing/deleting/smart-delete-004.html editing/pasteboard/smart-paste-008.html https://build.webkit.org/results/Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r249004%20(5907)/results.html
Tim Horton
Comment 10 2019-08-22 10:36:06 PDT
(In reply to Ryan Haddad from comment #9) > This change caused the following tests to fail on iOS Simulator: > editing/deleting/smart-delete-003.html > editing/deleting/smart-delete-004.html > editing/pasteboard/smart-paste-008.html > > https://build.webkit.org/results/ > Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r249004%20(5907)/ > results.html Rebaselined in https://trac.webkit.org/changeset/249017/webkit
Note You need to log in before you can comment on or make changes to this bug.