Source/WebKitLegacy/mac/WebCoreSupport/WebEditorClient.h
@@ -176,6 +176,10 @@ private:
 
     void registerUndoOrRedoStep(WebCore::UndoStep&, bool isRedo);
 
+#if PLATFORM(IOS_FAMILY)
+    bool shouldAllowSingleClickToChangeSelection(WebCore::Node& targetNode, const WebCore::VisibleSelection& newSelection) const;
+#endif
+
     bool canShowFontPanel() const final
     {
 #if PLATFORM(MAC)
